.metadata/.plugins/org.eclipse.cdt.ui/R9.build.log
13:08:25 **** Incremental Build of configuration Debug for project R9 ****
make all 
Building file: ../R9.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"R9.d" -MT"R9.o" -o "R9.o" "../R9.c"
../R9.c:303:6: error: conflicting types for 'merge_sort'
void merge_sort(int *array, const int size) {
     ^
../R9.h:10:6: note: previous declaration is here
void merge_sort(Data *array, const int size);
     ^
../R9.c:306:17: warning: incompatible pointer types passing 'int *' to parameter of type 'Data *' (aka 'Process *') [-Wincompatible-pointer-types]
        merge_sort_aux(array,0,size -1);
                       ^~~~~
../R9.c:292:26: note: passing argument to parameter 'array' here
void merge_sort_aux(Data*array,int left,int right) {
                         ^
1 warning and 1 error generated.
make: *** [R9.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

13:08:25 Build Failed. 2 errors, 1 warnings. (took 129ms)

